objects/StateCountryMapping__mdt/StateCountryMapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps an external system&apos;s country name or state/province code to the matching Salesforce picklist value when there&apos;s no direct match.</description>
    <label>StateCountryMapping</label>
    <pluralLabel>StateCountryMappings</pluralLabel>
</CustomObject>