objects/StateCountryMapping__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country name to which the state or province belongs (e.g., &quot;United States&quot; or &quot;Canada&quot;)</description>
    <inlineHelpText>Country name to which the state or province belongs (e.g., &quot;United States&quot; or &quot;Canada&quot;)</inlineHelpText>
    <label>Country</label>
    <length>120</length>
    <type>Text</type>
</CustomField>