objects/StateCountryMapping__mdt/fields/External_Value__c.field-meta.xml
<CustomField>
    <fullName>External_Value__c</fullName>
    <description>The raw value as sent by the external system (e.g. country name Türkiye, or a region code). Matched case-insensitively.</description>
    <inlineHelpText>The raw value as sent by the external system (e.g. country name Türkiye, or a region code). Matched case-insensitively.</inlineHelpText>
    <label>External Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>