objects/StateCountryMapping__mdt/fields/Salesforce_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Value__c</fullName>
    <description>The Salesforce picklist value to use instead - a valid HQ Country label or State &amp; Country picklist value.</description>
    <inlineHelpText>The Salesforce picklist value to use instead — a valid HQ Country label or State &amp; Country picklist value.</inlineHelpText>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>