objects/StateCountryMapping__mdt/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>External source system the value originates from (e.g. D&amp;B). Combined with Category and External Value to form the unique lookup key.</description>
    <inlineHelpText>External source system the value originates from (e.g. D&amp;B). Combined with Category and External Value to form the unique lookup key.</inlineHelpText>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>